--- a/APIToDatabase.ipynb
+++ b/APIToDatabase.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMampOxp9fkBi+FIwJl8hnG",
+      "authorship_tag": "ABX9TyO4nTc3R8hV5SwSkrcdQ3+6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,11 +33,11 @@
         "\n",
         "try:\n",
         "  conn = psycopg2.connect(\n",
-        "      dbname=\"postgres\",\n",
-        "      user=\"postgres\",\n",
-        "      password=\"postgrespassword\",\n",
-        "      host=\"34.100.149.23\",\n",
-        "      port=\"5432\"  # Use the port provided by ngrok\n",
+        "      dbname=\"\",\n",
+        "      user=\"\",\n",
+        "      password=\"\",\n",
+        "      host=\"\",\n",
+        "      port=\"\"\n",
         "  )\n",
         "  print(\"Connection successful!\")\n",
         "  conn.close()\n",
@@ -80,11 +80,11 @@
         "\n",
         "# Define PostgreSQL connection parameters\n",
         "db_params = {\n",
-        "    'dbname': 'postgres',\n",
-        "    'user': 'postgres',\n",
-        "    'password': 'postgrespassword',\n",
-        "    'host': '34.100.149.23',\n",
-        "    'port': '5432'\n",
+        "    'dbname': '',\n",
+        "    'user': '',\n",
+        "    'password': '',\n",
+        "    'host': '',\n",
+        "    'port': ''\n",
         "}\n",
         "\n",
         "# Create SQLAlchemy engine for pandas\n",
